Name:               aig
Version:            0.1.9.9
License:            BSD3
License-file:       LICENSE
Author:             Galois Inc.
Maintainer:         jhendrix@galois.com
Copyright:          (c) 2014 Galois Inc.
Category:           Data
build-type:         Simple
cabal-Version:      >= 1.10
Synopsis:           And-inverter graphs in Haskell.
Description:
  This package provides a generic interfaces for working
  with And-Inverter graphs (AIGs) in Haskell.  And-Inverter graphs
  are a useful format for representing combinatorial and
  sequential boolean circuits in a way that is amenable to
  simulation and analysis.

  These interfaces allow clients to write code that can create
  and use AIGs without depending on a particular AIG package.

flag enable-hpc
  Description: Collect HPC coverage information.
  Default: False

source-repository head
  type: git
  location: https://github.com/GaloisInc/aig.git

library
  hs-source-dirs:   src
  exposed-modules:
    Data.AIG
    Data.AIG.Interface
    Data.AIG.Operations
    Data.AIG.Trace

  default-Language: Haskell2010
  ghc-options:      -Wall -fno-ignore-asserts -auto-all -caf-all -O2
  build-depends:
    base == 4.*,
    mtl,
    vector,
    QuickCheck >= 2.7

  if flag(enable-hpc)
    ghc-options: -fhpc -hpcdir .hpc
